--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <div class="image-stack">
             <!-- Door 1 - Classic Wood Entry -->
             <div class="stack-item" style="--index: 0;" onclick="navigateToDetail('classic-wood-entry')">
-                <img src="https://images.unsplash.com/photo-1600585152220-90363fe7e115" alt="Classic Wood Entry Door">
+                <img src="door1.jpeg" alt="Classic Wood Entry Door">
                 <div class="door-info">
                     <div class="door-name">Classic Wood Entry</div>
                     <div class="door-features">Solid Wood • 36" Width • Stain Finish</div>
@@ -385,7 +385,7 @@
 
             <!-- Door 2 - Modern Steel Security -->
             <div class="stack-item" style="--index: 1;" onclick="navigateToDetail('modern-steel-security')">
-                <img src="https://images.unsplash.com/photo-1600566752355-35792bedcfea" alt="Modern Steel Security Door">
+                <img src="door2.jpg" alt="Modern Steel Security Door">
                 <div class="door-info">
                     <div class="door-name">Modern Steel Security</div>
                     <div class="door-features">Reinforced Steel • Multi-point Locking • Energy Efficient</div>
@@ -394,7 +394,7 @@
 
             <!-- Door 3 - French Patio -->
             <div class="stack-item" style="--index: 2;" onclick="navigateToDetail('french-patio')">
-                <img src="https://images.unsplash.com/photo-1600121848594-d8644e57abab" alt="French Patio Doors">
+                <img src="door3.jpg" alt="French Patio Doors">
                 <div class="door-info">
                     <div class="door-name">French Patio</div>
                     <div class="door-features">Double Doors • Tempered Glass • Wood Composite</div>
@@ -403,7 +403,7 @@
 
             <!-- Door 4 - Sliding Glass -->
             <div class="stack-item" style="--index: 3;" onclick="navigateToDetail('sliding-glass')">
-                <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a" alt="Sliding Glass Door">
+                <img src="door4.jpg" alt="Sliding Glass Door">
                 <div class="door-info">
                     <div class="door-name">Sliding Glass</div>
                     <div class="door-features">Energy Star Rated • Low-E Glass • Aluminum Frame</div>
@@ -412,7 +412,7 @@
 
             <!-- Door 5 - Rustic Barn -->
             <div class="stack-item" style="--index: 4;" onclick="navigateToDetail('rustic-barn')">
-                <img src="https://images.unsplash.com/photo-1513519245088-0e12902e5a38" alt="Rustic Barn Door">
+                <img src="door3.jpg" alt="Rustic Barn Door">
                 <div class="door-info">
                     <div class="door-name">Rustic Barn</div>
                     <div class="door-features">Reclaimed Wood • Sliding Mechanism • Custom Sizes</div>
